Fix card images and Designed to outlast trends section alignment on Elys Workstation pages

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -1576,7 +1576,7 @@ html.dark body .swiper-button-next:hover {
   html body section:first-of-type img[src*="pinpad-image"],
   html body section:first-of-type img[src*="workstation"],
   html body section:first-of-type img[src*="magtek"] {
-    transform: scale(1.3) !important;
+    transform: scale(1.2) !important;
     transform-origin: center right !important;
   }
 
@@ -1586,7 +1586,7 @@ html.dark body .swiper-button-next:hover {
   }
 
   /* Make specs timeline cards equal height in tablet view */
-  .group\/specs ol li > div {
+  .group\/specs ol li>div {
     min-height: 155px !important;
     display: flex !important;
     flex-direction: column !important;
@@ -1596,7 +1596,7 @@ html.dark body .swiper-button-next:hover {
 
 /* Mobile view specs timeline cards equal height */
 @media (max-width: 767px) {
-  .group\/specs ol li > div {
+  .group\/specs ol li>div {
     min-height: 85px !important;
     display: flex !important;
     flex-direction: column !important;
